2018-05-25  Steven G. Kargl  <kargl@gcc.gnu.org>

PR fortran/85780
	Backport from trunk
	* resolve.c (resolve_fl_procedure): Avoid NULL dereference.

2018-05-25  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/85780
	Backport from trunk
	* gfortran.dg/pr85780.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-7-branch@260771 138bc75d-0d04-0410-961f-82ee72b054a4